k8s/addons/sonarqube/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sonarqube-postgresql
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sonarqube-postgresql
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarqube
      ports:
        - {protocol: TCP, port: 5432}
  egress: []
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sonarqube
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: sonarqube
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector: {}
      ports:
        - {protocol: TCP, port: 9000}
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarqube-postgresql
      ports:
        - {protocol: TCP, port: 5432}
